--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,8 +7,13 @@ environment:
   sdk: '>=3.2.3 <4.0.0'
 
 dependencies:
+  equatable: ^2.0.5
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.1.4
+  progress_state_button: ^1.0.4
+  rounded_loading_button: ^2.1.0
+  supabase_flutter: ^2.3.4
 
 dev_dependencies:
   flutter_test:
