--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,13 +7,16 @@ environment:
   sdk: '>=3.2.3 <4.0.0'
 
 dependencies:
+  crypt: ^4.3.1
   equatable: ^2.0.5
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.4
+  intl: ^0.19.0
   progress_state_button: ^1.0.4
   rounded_loading_button: ^2.1.0
   supabase_flutter: ^2.3.4
+  table_calendar: ^3.1.0
 
 dev_dependencies:
   flutter_test:
