--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   rounded_loading_button: ^2.1.0
   supabase_flutter: ^2.3.4
   table_calendar: ^3.0.9
+  shared_preferences: ^2.2.3
 
 dev_dependencies:
   flutter_test:
