--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,12 +19,16 @@ dependencies:
   rounded_loading_button: ^2.1.0
   supabase_flutter: ^2.3.4
   table_calendar: ^3.0.9
-  shared_preferences: ^2.2.3
+  shared_preferences: ^2.2.3  
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
+  flutter_lints: ^4.0.0
+  hive_generator: ^2.0.1
+  build_runner: ^2.4.9
 
 flutter:
   uses-material-design: true
